# Mining_Simulation

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  environment.yml  requirements.txt
include/: MiningTruck.h  MiningTruckProcessor.h  Simulation.h  UnloadingStation.h  UnloadingStationProcessor.h
results/: MiningSimulationResults_MiningTrucks_2024-12-16_16-46-05.csv  MiningSimulationResults_UnloadingStations_2024-12-16_16-46-05.csv
scripts/: simResultsVisualizer.py
scripts/utils/: file_io.py  plotting.py
src/: main.cpp
test/: test_MiningTrucks_Init.cpp  test_MiningTrucks_update.cpp  test_Simulation_computePerformance.cpp  test_UnloadingStations_AssignVehicles.cpp  test_UnloadingStations_Init.cpp  test_UnloadingStations_update.cpp
